Added Visual Studio solution

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,43 @@ obj/
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,dotnetcore
+/modulo3/.vs/modulo3/v16/.suo
+/modulo3/.vs/modulo3/v16
+/modulo3/.vs/modulo3/v15/.suo
+/modulo3/.vs/modulo3/v15
+/modulo3/.vs/modulo3/DesignTimeBuild/.dtbcache.v2
+/modulo3/.vs/modulo3/DesignTimeBuild/.dtbcache
+/modulo3/.vs/modulo3/DesignTimeBuild
+/modulo3/.vs/modulo3
+/modulo2/.vs/modulo2/v16/.suo
+/modulo2/.vs/modulo2/v16
+/modulo2/.vs/modulo2/v15/Server/sqlite3/storage.ide-wal
+/modulo2/.vs/modulo2/v15/Server/sqlite3/storage.ide-shm
+/modulo2/.vs/modulo2/v15/Server/sqlite3/storage.ide
+/modulo2/.vs/modulo2/v15/Server/sqlite3/db.lock
+/modulo2/.vs/modulo2/v15/Server/sqlite3
+/modulo2/.vs/modulo2/v15/.suo
+/modulo2/.vs/modulo2/v15
+/modulo2/.vs/modulo2/DesignTimeBuild/.dtbcache.v2
+/modulo2/.vs/modulo2/DesignTimeBuild/.dtbcache
+/modulo2/.vs/modulo2/DesignTimeBuild
+/modulo2/.vs/modulo2
+/modulo1/.vs/modulo1/v16/.suo
+/modulo1/.vs/modulo1/v16
+/modulo1/.vs/modulo1/v15/Server/sqlite3/storage.ide-wal
+/modulo1/.vs/modulo1/v15/Server/sqlite3/storage.ide-shm
+/modulo1/.vs/modulo1/v15/Server/sqlite3/storage.ide
+/modulo1/.vs/modulo1/v15/Server/sqlite3/db.lock
+/modulo1/.vs/modulo1/v15/Server/sqlite3
+/modulo1/.vs/modulo1/v15/.suo
+/modulo1/.vs/modulo1/v15
+/modulo1/.vs/modulo1/DesignTimeBuild/.dtbcache.v2
+/modulo1/.vs/modulo1/DesignTimeBuild/.dtbcache
+/modulo1/.vs/modulo1/DesignTimeBuild
+/modulo1/.vs/modulo1
+/.vs/VSWorkspaceState.json
+/.vs/slnx.sqlite
+/.vs/ProjectSettings.json
+/.vs/dominat5-bus1/v16/.suo
+/.vs/dominat5-bus1/v16
+/.vs
